--- a/about.html
+++ b/about.html
@@ -110,36 +110,33 @@
 	<!-- Tri dharma -->
 	<section class="why bg-li py-5" id="why">
 		<div class="container py-xl-5 py-3">
-		<h3 class="triDharma"> TRI DHARMA PERGURUAN TINGGI </h3>
-			<div class="row">
-				<div class="col-md-4">
+		<h3 class="mt-2 mb-3 triDharma"> TRI DHARMA PERGURUAN TINGGI </h3>
+
+			<div class="rowtri">
+				<div class="col-md-4 tri1">
 					<div class="ser-grd">
 						<div class="row">
 							<div class="col-md-3 col-2 text-center services-icon icon-clr5">
 								<span class="fa fa-graduation-cap"></span>
 							</div>
 							<div class="col-md-9 col-10 text-left services-grid">
-								<h4>Pendidikan</h4>
+								<h4 class="subtri">Pendidikan</h4>
 								<p>Pendidikan dan pengajaran adalah point pertama dan utama dari Tri 
 									Dharma Perguruan Tinggi. Pendidikan danpengajaran memiliki peranan yang 
 									sangat penting dalam suatu proses pembelajaran.</p>
 							</div>
 						</div>
 					</div>
-					<div class="ser-grd mt-md-5 mt-4">
-						<div class="row">
-						
-						</div>
-					</div>
+					
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 tri2">
 					<div class="ser-grd mt-md-0 mt-4">
 						<div class="row">
 							<div class="col-md-3 col-2 text-center services-icon icon-clr1">
 								<span class="fa fa-laptop"></span>
 							</div>
 							<div class="col-md-9 col-10 text-left services-grid">
-								<h4>Penelitian</h4>
+								<h4 class="subtri">Penelitian</h4>
 								<p>Peneitian dan pengembangan juga sangatlah penting bagi kemajuan 
 									perguruan tinggi,kesejahteraan masyarakat serta kemajuan bangsa dan negara. 
 									Dari penelitian dan pengembangan maka mahasiswa mampu mengembangkan ilmu dan teknologi .</p>
@@ -152,14 +149,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 tri3">
 					<div class="ser-grd mt-md-0 mt-4">
 						<div class="row">
 							<div class="col-md-3 col-2 text-center services-icon icon-clr3">
 								<span class="fa fa-handshake-o"></span>
 							</div>
 							<div class="col-md-9 col-10 text-left services-grid">
-								<h4>Pengabdian Masyarakat</h4>
+								<h4 class="subtri">Pengabdian Masyarakat</h4>
 								<p>Menurut undang – undang tentang pendidikan tinggi, pengabdian kepada 
 									masyarakat adalah kegiatan sivitas akademika yang memanfaatkan ilmu 
 									pengetahuan dan teknologi untuk memajukan kesejahteraan masyarakat dan mencerdaskan 
@@ -274,7 +271,7 @@
 						</div>
 					</div>
 				</div>
-
+			</div>
 
 	
 		</div>
