--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title>INTERPRETER 202012121</title>
+    <title>INTERPRETER 2020</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="d-md-flex">
                     <div class="w3ls_banner_txt">
-                        <h3 class="w3ls_pvt-title">Bakti Sosial <br><span>INTERPRETER 2020</span></h3>
+                        <h3 class="w3ls_pvt-title">Bakti Sosial <br><span>INTERPRETER 20203231</span></h3>
                         <p class="text-sty-banner"> INTERPRETER (Informatics egineering on Publics Care and technologies Empower), nama kegiatan kami telah memaknai konsep kami dan konsep kami sangat efektif dalam hal manfaat yang didapatkan untuk masyarakat... </p>
                         <a href="about.html" class="btn button-style mt-md-5 mt-4">Lebih lengkap</a>
                     </div>
