--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="zxx">
 
 <head>
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script>
+    $(document).ready(function(){
+    $(".preloader").fadeOut();
+    })
+    </script>
     <title>INTERPRETER 2020</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -330,6 +336,12 @@
         });
     });
 </script>
+<div class="preloader">
+  <div class="loading">
+    <img href="css/poi.gif" width="80">
+    <p>Harap Tunggu</p>
+  </div>
+</div>
 </body>
 
 
