--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
 
 	<head>
 		<title>INTERPRETER 2020</title>
+		<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+		<script>
+$(document).ready(function(){
+$(".preloader").fadeOut();
+})
+</script>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8" />
@@ -34,6 +40,12 @@
 	</head>
 
 <body>
+<div class="preloader">
+  <div class="loading">
+    <img src="css/poi.gif" width="80">
+    <p>Harap Tunggu</p>
+  </div>
+</div>
 	<!-- main banner -->
 	<div class="main-top" id="home">
 		<!-- header -->
