menambahkan foto dan mengatur posisi tim

--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@ $(".preloader").fadeOut();
 						</div>
 					</div>
 				</div>
-
+				<div class="col-lg-2 col-sm- ab-content text-center mt-lg-0 mt-4"></div>
 					<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner-bawah">
 						<img src="images/t3.jpg" alt="news image" class="img-fluid">
@@ -260,13 +260,6 @@ $(".preloader").fadeOut();
 						</div>
 					</div>
 				</div>
-
-					<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
-					<div class="ab-content-inner-bawah-tengah">
-					
-					</div>
-				</div>
-
 					<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner-bawah">
 						<img src="images/t3.jpg" alt="news image" class="img-fluid">
