--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="zxx">
 
 <head>
-    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script>
-    $(document).ready(function(){
-    $(".preloader").fadeOut();
-    })
-    </script>
+    <meta http-equiv="content-type" content="text/html" />
+    <meta name="author" content="lolkittens" />
     <title>INTERPRETER 2020</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,6 +36,13 @@
 </head>
 
 <body>
+
+    <div id="loading">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <!-- main banner -->
     <div class="main-top" id="home">
 
@@ -337,12 +340,17 @@
     });
 </script>
 <div class="preloader">
-  <div class="loading">
-    <img href="css/poi.gif" width="80">
-    <p>Harap Tunggu</p>
+    <div class="loading">
+      <img src="css/poi.gif" width="80">
+      <p>Harap Tunggu</p>
+    </div>
   </div>
-</div>
 </body>
 
-
+<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+    $(".preloader").fadeOut();
+    })
+    </script>
 </html>
