--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <ul class="menu">
                                 <li><a href="index.html" class="active">Beranda</a></li>
                                 <li><a href="about.html">Tentang INTERPRETER</a></li>
-                                <li><a href="#">Filosofi Logo</a></li>
+                                <li><a href="#filosofi.html">Filosofi Logo</a></li>
                                 <li><a href="#">Kontak Kami</a></li>
                             </ul>
                         </nav>
