--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 							<ul class="menu">
 								<li><a href="index.html" class="active">Beranda</a></li>
 								<li><a href="about.html">Tentang INTERPRETER</a></li>
-								<li><a href="pricing.html">Filosofi Logo</a></li>
+								<li><a href="filosofi.html">Filosofi Logo</a></li>
 								<li><a href="contact.html">Kontak Kami</a></li>
 							</ul>
 						</nav>
