--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
 			<div class="row ab-info second pt-lg-4">
 				<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner">
-						<img src="images/giga.svg" alt="news image" class="img-fluid">
+						<img src="images/team/giga.svg" alt="news image" class="img-fluid">
 						<div class="ab-info-con">
 							<h4 class="text-team-w3">Andi Gigatera Halil M.</h4>
 							<ul class="list-unstyled team-socil-w3pvts">
@@ -201,7 +201,7 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner">
-						<img src="images/arif.svg" alt="news image" class="img-fluid">
+						<img src="images/team/arif.svg" alt="news image" class="img-fluid">
 						<div class="ab-info-con">
 							<h4 class="text-team-w3">Arif Putera Wijaya</h4>
 							<ul class="list-unstyled team-socil-w3pvts">
@@ -214,7 +214,7 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner">
-						<img src="images/brillianita.svg" alt="news image" class="img-fluid">
+						<img src="images/team/brillianita.svg" alt="news image" class="img-fluid">
 						<div class="ab-info-con">
 							<h4 class="text-team-w3">Brillianita Rezki Hijnur</h4>
 							<ul class="list-unstyled team-socil-w3pvts">
@@ -227,7 +227,7 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner">
-						<img src="images/citra.svg" alt="news image" class="img-fluid">
+						<img src="images/team/citra.svg" alt="news image" class="img-fluid">
 						<div class="ab-info-con">
 							<h4 class="text-team-w3">Andi Widad Sucitra</h4>
 							<ul class="list-unstyled team-socil-w3pvts">
@@ -240,7 +240,7 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 ab-content text-center mt-lg-0 mt-4">
 					<div class="ab-content-inner">
-						<img src="images/artia.svg" alt="news image" class="img-fluid">
+						<img src="images/team/artia.svg" alt="news image" class="img-fluid">
 						<div class="ab-info-con">
 							<h4 class="text-team-w3">Artia Audrian Aryatama</h4>
 							<ul class="list-unstyled team-socil-w3pvts">
