--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <li><a href="index.html" class="active">Beranda</a></li>
                                 <li><a href="about.html">Tentang INTERPRETER</a></li>
                                 <li><a href="filosofi.html">Filosofi Logo</a></li>
-                                <li><a href="#">Kontak Kami</a></li>
+                                <li><a href="contact.html">Kontak Kami</a></li>
                             </ul>
                         </nav>
                     </div>
