--- a/filosofi.html
+++ b/filosofi.html
@@ -43,7 +43,7 @@
 								<li><a href="index.html">Beranda</a></li>
 								<li><a href="about.html">Tentang INTERPRETER</a></li>
 								<li><a href="filosofi.html" class="active">Filosofi Logo</a></li>
-								<li><a href="#">Kontak Kami</a></li>
+								<li><a href="contact.html">Kontak Kami</a></li>
 							</ul>
 						</nav>
 					</div>
