--- a/filosofi.html
+++ b/filosofi.html
@@ -120,7 +120,7 @@
         <div class="col-md-4 mt-5">
           <div class="card p-4 ukuran for-shadow">
             <img src="images/filosofi/I.png" class="filosofi card-img-top" alt="Gambar1">
-            <div class="card-body">
+            <div class="card-body teks">
               <h3>SHAPE LETTER I</h3>
               <p class="card-text mt-3">Nama kegiatan INTERPRETER diawali dengan huruf “I”</p>
             </div>
@@ -130,7 +130,7 @@
         <div class="col-md-4 mt-5">
           <div class="card p-4 ukuran for-shadow">
             <img src="images/filosofi/TEKNOLOGI.png" class="filosofi card-img-top" alt="Gambar2">
-            <div class="card-body">
+            <div class="card-body teks">
               <h3>TECHNOLOGY</h3>
               <p class="card-text mt-3">Merupakan salah satu simbol dari Teknologi dimana teknologi itu sendiri adalah pengembangan dan  penerapan berbagai peralatan atau sistem yang dapat menyelesaikan persoalan-persoalan yang dihadapi manusia dalam kehidupan sehari- hari.  </p>
             </div>
@@ -140,7 +140,7 @@
         <div class="col-md-4 mt-5">
           <div class="card p-4 ukuran for-shadow">
             <img src="images/filosofi/Tangan.png" class="filosofi card-img-top" alt="Gambar3">
-            <div class="card-body">
+            <div class="card-body teks">
               <h3>HAND</h3>
               <p class="card-text mt-3">Bentuk tangan yang sedang memberi dengan corak “teknologi”, melambangkan tangan seorang ahli teknologi yang memberikan pertolongan kepada orang-orang yang membutuhkan </p>
             </div>
@@ -154,7 +154,7 @@
         <div class="col-md-4 pb-5">
           <div class="card p-4 ukuran for-shadow">
             <img src="images/filosofi/V.png" class="filosofi card-img-top" alt="Gambar4">
-            <div class="card-body">
+            <div class="card-body teks">
               <h3>SHAPE LETTER V</h3>
               <p class="card-text mt-3">Shape berbentuk menyerupai huruf V, atau biasa di lambangkan dengan angka Romawi 5, makna V dalam logo ini merupakan kegiatan Bakti Sosial HMIF FT-UH yang ke-5</p>
             </div>
@@ -164,7 +164,7 @@
         <div class="col-md-4 pb-5">
           <div class="card p-4 ukuran for-shadow">
             <img src="images/filosofi/sosial.png" class="filosofi card-img-top" alt="Gambar5">
-            <div class="card-body">
+            <div class="card-body teks">
               <h3>SOCIAL</h3>
               <p class="card-text mt-3">Membentuk orang dengan tangan terangkat dan melompat melambangkan orang yang berbahagia, dimana kegiatan ini memiliki tujuan untuk memberikan kebhagiaan kepada orang-orang</p>
             </div>
@@ -185,30 +185,30 @@
         </div>
       </div>
       <div class="row justify-content-center mt-5">
-        <div class="col-md-4 text-right">
-          <img class="for-shadow" src="images/filosofi/Blue.png" alt="Blue">
-        </div>
-        <div class="col-md-6">
-          <h3>BLUE</h3>
-          <p>Stabil, Kecerdasan, dan Percaya diri</p>
+        <div class="col-md-6 warna">
+          <img class="for-shadow warna" src="images/filosofi/Blue.png" alt="Blue">
+          <div class="deskripsi-warna text-left">
+            <h3>BLUE</h3>
+            <p>Stabil, Kecerdasan, dan Percaya diri</p>
+          </div>
         </div>
       </div>
       <div class="row justify-content-center mt-5">
-        <div class="col-md-4 text-right">
-          <img class="for-shadow" src="images/filosofi/white.png" alt="White">
-        </div>
-        <div class="col-md-6">
-          <h3>WHITE</h3>
-          <p>Bersih, Suci, Ringan dan Kebebasan</p>
+        <div class="col-md-6 warna">
+          <img class="for-shadow warna" src="images/filosofi/white.png" alt="White">
+          <div class="deskripsi-warna text-left">
+            <h3>WHITE</h3>
+            <p>Bersih, Suci, Ringan dan Kebebasan</p>
+          </div>
         </div>
       </div>
-      <div class="row justify-content-center mt-5 pb-5 mb-5">
-        <div class="col-md-4 text-right mb-5">
-          <img class="for-shadow" src="images/filosofi/Grey.png" alt="Grey">
-        </div>
-        <div class="col-md-6 mb-5">
-          <h3>GREY</h3>
-          <p>Keseriusan, Kestabilan, Kemandirian dan Tanggung Jawab</p>
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-6 warna">
+          <img class="for-shadow warna" src="images/filosofi/Grey.png" alt="Grey">
+          <div class="deskripsi-warna text-left">
+            <h3>GREY</h3>
+            <p>Keseriusan, Kestabilan, Kemandirian <br> dan Tanggung Jawab</p>
+          </div>
         </div>
       </div>
     </div>
@@ -219,14 +219,14 @@
   <section class="konstruksi-logo">
     <div class="container text-center">
       <div class="row mt-5 mb-5">
-        <div class="col mt-5 mx-auto">
+        <div>
           <h1>Konstruksi Logo</h1>
         </div>
       </div>
       <div class="row mt-4 justify-content-center text-center mb-5">
         <div class="col-md-4 mb-4">
           <!-- <div class="card p-4"> -->
-            <img src="images/filosofi/konstruksi logo.png" class="card-img-top bg-dark p-4 for-shadow-dark" alt="Konstruksi Logo">
+            <img src="images/filosofi/konstruksi logo.png" class="card-img-top bg-dark p-4 for-shadow" alt="Konstruksi Logo">
           <!-- </div> -->
         </div>
       </div>
@@ -235,7 +235,7 @@
   </section>
 
   <!-- PENGGUNAAN LOGO -->
-  <section class="warna-logo bg-light">
+  <section class="penggunaan-logo bg-light">
     <div class="container text-center mx-auto">
 
       <div class="row mt-5 mb-5">
@@ -256,7 +256,7 @@
         <div class="col-md-6  mb-5">
           <div class="card penggunaan p-4 for-shadow">
             <h3>Landscape</h3>
-            <img src="images/filosofi/landscape.png" class="card-img-top mt-5 ot-3s" alt="Logo Landscape">
+            <img src="images/filosofi/landscape.png" class="card-img-top landscape" alt="Logo Landscape">
           </div>
         </div>
 
