Mengatur Ulang Tampilan

--- a/filosofi.html
+++ b/filosofi.html
@@ -202,7 +202,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center mt-5">
+      <div class="row justify-content-center mt-5 mb-5 pb-5">
         <div class="col-md-6 warna">
           <img class="for-shadow warna" src="images/filosofi/Grey.png" alt="Grey">
           <div class="deskripsi-warna text-left">
@@ -218,7 +218,7 @@
 
   <section class="konstruksi-logo">
     <div class="container text-center">
-      <div class="row mt-5 mb-5">
+      <div class="row justify-content-center mt-5 mb-5">
         <div>
           <h1>Konstruksi Logo</h1>
         </div>
