--- a/filosofi.html
+++ b/filosofi.html
@@ -223,12 +223,8 @@
           <h1>Konstruksi Logo</h1>
         </div>
       </div>
-      <div class="row mt-4 justify-content-center text-center mb-5">
-        <div class="col-md-4 mb-4">
-          <!-- <div class="card p-4"> -->
-            <img src="images/filosofi/konstruksi logo.png" class="card-img-top bg-dark p-4 for-shadow" alt="Konstruksi Logo">
-          <!-- </div> -->
-        </div>
+      <div class="row justify-content-center text-center mb-5">
+        <img src="images/filosofi/konstruksi logo.png" class="card-img-top bg-dark p-4 for-shadow" alt="Konstruksi Logo">
       </div>
       
     </div>
@@ -293,15 +289,6 @@
 
     </div>
   </section>
-
-
-  <!-- footer -->
-  <footer class="bg-li py-5">
-    <div class="container py-xl-5 py-lg-3">
-
-    </div>
-  </footer>
-  <!-- //footer -->
 
 
   <!-- copyright bottom -->
